# otis

./: CMakeLists.txt  README.md  main.cpp  otis.cpp  raster.cpp
alara/: alara.cpp
example/: README.md  dot.dot  fluxes0  fluxes1  graph1.dot  mcnp_output  test_0  test_1
geom/: CMakeLists.txt  geometry.cpp  geometry.hpp
geom/read_cgm/: CMakeLists.txt  read_cgm.cpp  read_cgm.hpp
geom/read_cgm/test/: CMakeLists.txt  graph1.dot  model1_mod.sat  read_cgm_test.cpp  read_cgm_test_driver.cpp  test_geom.sat  test_geom_water.sat  test_geom_water_2.sat  test_geom_water_flow.sat  test_geom_water_time.sat
geom/read_dot/: CMakeLists.txt  read_dot.cpp  read_dot.hpp
geom/read_dot/test/: CMakeLists.txt  dot.dot  dot.ps  dot_bad.dot  read_dot_test.cpp  read_dot_test_driver.cpp
navigator/: CMakeLists.txt  Link.h  Navigation.cpp  Navigation.hpp  Network.cpp  Network.h
navigator/test/: CMakeLists.txt  navigator_test.cpp  navigator_test_driver.cpp
output/: CMakeLists.txt
output/alara/: CMakeLists.txt  alara.cpp  alara.hpp
output/alara/test/: CMakeLists.txt  alara_test.cpp  alara_test_driver.cpp  mcnp_wrong_output.txt
output/dot/: CMakeLists.txt  dot_output.cpp  dot_output.hpp
output/mcnp_sdef/: CMakeLists.txt  mcnp_sdef.cpp  mcnp_sdef.hpp
read_tally/: CMakeLists.txt  read_tally.cpp  read_tally.hpp
read_tally/test/: mcnp_output
